--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "https://individual-project-yee4.onrender.com/api/$1"
+      "destination": "/api/$1"
     }
   ]
 }
