--- a/backend/package.json
+++ b/backend/package.json
@@ -1,26 +1,21 @@
 {
-  "name": "student-document-store-backend",
+  "name": "student-docs-backend",
   "version": "1.0.0",
-  "description": "Backend for Student Document Store System",
   "main": "server.js",
   "type": "commonjs",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.6",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "express-validator": "^7.0.1",
-    "helmet": "^8.1.0",
+    "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.0",
+    "mongoose": "^7.6.3",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
